# doc-rag-search

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.standalone.yml  docker-compose.yml  pyproject.toml  railway.toml
src/: __init__.py  api_server.py  config.py  embedding_client.py  llm_client.py  pdf_ingest.py  rag_pipeline.py  reranker.py  snippet_extractor.py  sync_knowledge_base.py  vector_store.py
src/utils/: logger.py
static/: demo.html
tests/: test_queries.json
