[project]
name = "legal-rag"
version = "0.1.0"
description = "Legal Casebase Search Demo - Evatt AI Interview"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "qdrant-client[fastembed]>=1.7.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.6.0",
    "slowapi>=0.1.9",
    "sentence-transformers>=2.2.0",
    "pymupdf>=1.24.0",
    "python-magic>=0.4.27",
    "reportlab>=4.0.0",
    "zvec>=0.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
